Added HTTPS logs and change secret creation